--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2  # Checks out the repository
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.12'
+    
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+    
     - name: Run migrations
       run: |
+        cd server
         python manage.py makemigrations
         python manage.py migrate
+
     - name: Run tests
       run: |
-        pytest
+        cd server
+        pytest .
+
+    - name: Install dependencies
+      run: |
+        pip install -r server/requirements.txt  # Correct path
