--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,9 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-
       - name: Run Linter
         run: |
+          cd server
           find . -name "*.py" -exec flake8 {} +
           echo "Linted all the Python files successfully"
 
