--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
 
       - name: Run Linter
         run: |
-          find ./server/database -name "*.js" -exec jshint {} +
+          find ./server -name "*.js" -exec jshint {} +
           echo "Linted all the JS files successfully"
