--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,7 @@ jobs:
       with:
         python-version: '3.12'
     - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      run: pip install -r server/requirements.txt
     - name: Run migrations
       run: |
         python manage.py makemigrations
