--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'Lint Code'
+name: 'CI: Lint and Django Build'
 
 on:
   push:
@@ -20,15 +20,15 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Install dependencies
+      - name: Install Flake8
         run: |
           python -m pip install --upgrade pip
           pip install flake8
 
-      - name: Run Linter
+      - name: Run Python Linter
         run: |
           find . -name "*.py" -exec flake8 {} +
-          echo "Linted all the python files successfully"
+          echo "Python linting passed."
 
   lint_js:
     name: Lint JavaScript Files
@@ -46,7 +46,36 @@ jobs:
       - name: Install JSHint
         run: npm install jshint --global
 
-      - name: Run Linter
+      - name: Run JS Linter
         run: |
           find ./server/database -name "*.js" -exec jshint {} +
-          echo "Linted all the js files successfully"
+          echo "JS linting passed."
+
+  django_ci:
+    name: Django CI Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
+
+      - name: Install Django Dependencies
+        working-directory: ./server
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Migrations
+        working-directory: ./server
+        run: |
+          python manage.py makemigrations
+          python manage.py migrate
+
+      - name: Run Django Tests
+        working-directory: ./server
+        run: python manage.py test
